--- a/layouts/shortcodes/github/tag.html
+++ b/layouts/shortcodes/github/tag.html
@@ -1,5 +1,19 @@
 {{- $username := $.Site.Data.social.github -}}
 {{- with $.Site.Params.gitHubToken -}}
-    {{- $username = print $username ":" . -}}
+{{- $username = print $username ":" . -}}
 {{- end -}}
-{{- partial "github/tag" $username -}}
+{{- if not $username -}}
+{{ errorf "Input must be a GitHub username: %s" .Position }}
+{{- end -}}
+
+{{- $githubApiUrl := "https://api.github.com/" -}}
+{{- $githubHeaders := dict "Accept" "application/vnd.github.v3+json" -}}
+{{- if in $username ":" -}}
+{{- $githubAuthorization := print "Basic " (base64Encode $username) -}}
+{{- $githubHeaders = merge $githubHeaders (dict "Authorization" $githubAuthorization) -}}
+{{- $username = index (split $username ":") 0 -}}
+{{- end -}}
+
+{{- $userData := getJSON $githubApiUrl "users/" $username $githubHeaders -}}
+
+<a href="{{ $userData.html_url }}" rel="noreferrer" target="_blank">@{{ $userData.login }}</a>
