--- a/layouts/partials/site/styles.html
+++ b/layouts/partials/site/styles.html
@@ -1,3 +1,3 @@
-{{ $options := dict "transpiler" "dartsass" "outputStyle" "compressed" "enableSourceMap" (not hugo.IsProduction)  }}
-{{ $style := resources.Get "/css/main.scss" | resources.ToCSS $options | resources.Fingerprint }}
+{{- $options := dict "transpiler" "dartsass" "outputStyle" "compressed"   -}}
+{{- $style := resources.Get "/css/main.scss" | resources.ToCSS $options -}}
 <link rel="stylesheet" href="{{ $style.Permalink }}">
