Rename and reformat files

--- a/layouts/shortcodes/github/stats.gohtml
+++ b/layouts/shortcodes/github/stats.gohtml
@@ -114,7 +114,9 @@
         <td style="text-align: right;">{{ $repos | lang.FormatNumber 0 }}</td>
     </tr>
     <tr>
-        <td>📖&ensp;<span title='{{ i18n "githubOsiApprovedReposDescription" }}'>{{ i18n "githubOsiApprovedRepos" }}</span></td>
+        <td>📖&ensp;<span
+                    title='{{ i18n "githubOsiApprovedReposDescription" }}'>{{ i18n "githubOsiApprovedRepos" }}</span>
+        </td>
         <td style="text-align: right;">{{ $openSourceRepos | lang.FormatNumber 0 }}</td>
     </tr>
     <tr>
