Add clones stats

--- a/layouts/shortcodes/github/stats.gohtml
+++ b/layouts/shortcodes/github/stats.gohtml
@@ -62,6 +62,8 @@
 {{- $forks := 0 -}}
 {{/* Count commits. */}}
 {{- $commits := 0 -}}
+{{/* Count clones. */}}
+{{- $clones := 0 -}}
 
 {{- range $reposData -}}
     {{- $repos = add $repos 1 -}}
@@ -92,6 +94,12 @@
             {{- end -}}
         {{- end -}}
     {{- end -}}
+
+    {{- $clonesData := getJSON .url "/traffic/clones" $githubHeaders -}}
+    {{- with $clonesData -}}
+        {{- $clones = add $clones .count -}}
+    {{- end -}}
+    {{/*    {{.}}*/}}
 {{- end -}}
 
 {{/* Convert kilobytes to megabytes. */}}
@@ -142,5 +150,9 @@
     <tr>
         <td>💬&ensp;{{ i18n "githubCommits" }}</td>
         <td style="text-align: right;">{{ $commits | lang.FormatNumber 0 }}</td>
+    </tr>
+    <tr>
+        <td>📥&ensp;{{ i18n "githubClones" }}</td>
+        <td style="text-align: right;">{{ $clones | lang.FormatNumber 0 }}</td>
     </tr>
 </table>
