--- a/layouts/shortcodes/cv/open-source.gohtml
+++ b/layouts/shortcodes/cv/open-source.gohtml
@@ -58,6 +58,8 @@
                                         {{- partial "icon/fontawesome" "solid/file-alt" -}}
                                     {{- else if strings.Contains . "aclanthology.org" -}}
                                         {{- partial "icon/fontawesome" "solid/file-alt" -}}
+                                    {{- else if strings.Contains . "ceur-ws.org" -}}
+                                        {{- partial "icon/fontawesome" "solid/file-alt" -}}
                                     {{- else if strings.Contains . "pypi.org" -}}
                                         {{- partial "icon/fontawesome" "brands/python" -}}
                                     {{- else -}}
